Create extensions.json